feat: update dependencies and enhance configuration
Signed-off-by: Janos Sarusi-Kis <janossk@cisco.com>