@@ -30,8 +30,8 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
 
-        <slim.bindings.version>1.3.0</slim.bindings.version>
-        <a2a.java.sdk.version>1.0.0.Beta1</a2a.java.sdk.version>
+        <slim.bindings.version>1.4.1</slim.bindings.version>
+        <a2a.java.sdk.version>1.1.0.Final</a2a.java.sdk.version>
         <protobuf.version>4.33.1</protobuf.version>
         <jna.version>5.14.0</jna.version>
     </properties>
@@ -86,6 +86,9 @@
                     <configuration>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
